--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/kmulloth/a-A-Solo-1/issues"
   },
-  "homepage": "https://github.com/kmulloth/a-A-Solo-1#readme"
+  "homepage": "https://github.com/kmulloth/a-A-Solo-1#readme",
+  "dependencies": {
+    "heroku": "^7.60.2"
+  }
 }
